@@ -524,55 +524,58 @@
       i: GGoban - Play go and review game records
     </p>
     <p>
-      j: KGoldrunner - A game of action and puzzle-solving
+      j: Hedgewars - Worms style game
     </p>
     <p>
-      k: AMOR
+      k: KGoldrunner - A game of action and puzzle-solving
     </p>
     <p>
-      l: Blinken - A memory enhancement game
+      l: AMOR
     </p>
     <p>
-      m: Bomber
+      m: Blinken - A memory enhancement game
     </p>
     <p>
-      n: Bovo
+      n: Bomber
     </p>
     <p>
-      o: Granatier
+      o: Bovo
     </p>
     <p>
-      p: Kanagram - KDE Letter Order Game
+      p: Granatier
     </p>
     <p>
-      q: Kapman - Eat pills escaping ghosts
+      q: Kanagram - KDE Letter Order Game
     </p>
     <p>
-      r: KAtomic
+      r: Kapman - Eat pills escaping ghosts
     </p>
     <p>
-      s: KBattleship
+      s: KAtomic
     </p>
     <p>
-      t: KBlackBox
+      t: KBattleship
     </p>
     <p>
-      u: KBlocks
+      u: KBlackBox
     </p>
     <p>
-      v: KBounce
+      v: KBlocks
     </p>
     <p>
-      w: KBreakOut
+      w: KBounce
     </p>
     <p>
-      x: KSnake
+      x: KBreakOut
     </p>
     <p>
-      y: KDiamond
+      y: KSnake
     </p>
     <p>
-      z: KFourInLine
+      z: KDiamond
+    </p>
+    <p>
+      |: KFourInLine
     </p>
     <p>
       |: KHangMan - KDE Hangman Game
@@ -887,6 +890,12 @@
     </p>
     <p>
       |: Wicd - Manage Wired/Wireless Networks
+    </p>
+    <p>
+      |: Zenmap (as root)
+    </p>
+    <p>
+      |: Zenmap
     </p>
     <hr>
     <h3>
@@ -2875,19 +2884,19 @@
       c: Configure CORNER-SECOND-MODE-LEFT-BUTTON
     </p>
     <p>
-      d: Configure CORNER-SECOND-MODE-RIGHT-BUTTON
+      d: Configure CORNER-MAIN-MODE-RIGHT-BUTTON
     </p>
     <p>
-      e: Configure CORNER-SIZE
+      e: Configure CORNER-SECOND-MODE-RIGHT-BUTTON
     </p>
     <p>
-      f: Configure CORNER-MAIN-MODE-RIGHT-BUTTON
+      f: Configure CORNER-SIZE
     </p>
     <p>
-      g: Configure VIRTUAL-KEYBOARD-CMD
+      g: Configure CLFSWM-TERMINAL-CMD
     </p>
     <p>
-      h: Configure CLFSWM-TERMINAL-CMD
+      h: Configure VIRTUAL-KEYBOARD-CMD
     </p>
     <p>
       i: Configure CORNER-MAIN-MODE-MIDDLE-BUTTON
